--- a/CSS/home.css
+++ b/CSS/home.css
@@ -5,46 +5,42 @@
     padding: 0;
     margin: 0;
 }
-
 html {
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
+
 }
 
-ul {
+ul  {
     list-style-type: none;
 }
-
 .container {
+    /* padding-left: 15px;
+    padding-right: 15px; */
     margin-left: auto;
     margin-right: auto;
 }
-
 @media (min-width: 768px) {
     .container {
         width: 750px;
     }
 }
-
 @media (min-width: 992px) {
     .container {
         width: 970px;
     }
 }
-
 @media (min-width: 1200px) {
     .container {
         width: 1170px;
     }
 }
-
 header {
     position: absolute;
     left: 0;
     width: 100%;
     z-index: 2;
 }
-
 header .container {
     display: flex;
     justify-content: space-between;
@@ -52,20 +48,16 @@ header .container {
     position: relative;
     min-height: 97px;
 }
-
 header .container>a {
     text-decoration: none;
 }
-
 header .logo {
     display: flex;
     align-items: center;
 }
-
 header .logo img {
     height: 40px;
 }
-
 header .logo p {
     font-size: 20px;
     font-weight: 700;
@@ -75,49 +67,44 @@ header .logo p {
     font-weight: 700;
     font-size: 30px;
     color: #D1D1D1;
+    /* text-decoration: none; */
 }
-
 header nav {
     flex: 1;
+    /* text-align: right; */
     display: flex;
     justify-content: flex-end;
 }
-
 header nav .toggle-menu {
     cursor: pointer;
     background-color: #000;
 }
-
 @media (min-width: 768px) {
     header nav .toggle-menu {
         display: none;
     }
 }
-
 header nav ul {
     display: flex;
     align-items: center;
 }
-
 @media (max-width: 767px) {
     header nav ul {
-        display: none;
+        display: none;   
     }
-
     .container {
         padding-left: 15px;
         padding-right: 15px;
     }
 }
-
 header nav ul li a {
     padding: 10px 10px;
     display: block;
     text-decoration: none;
     font-family: 'Noto Sans Arabic';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 19px;
+font-style: normal;
+font-weight: 500;
+font-size: 19px;
     transition: 0.3s;
     position: relative;
     z-index: 2;
@@ -127,20 +114,17 @@ header nav ul li a {
     border-radius: 7px;
     margin-left: 10px;
 }
-
-header nav ul li a:hover {
+header nav ul li a:hover{
     background-color: rgb(222 225 227);
     padding: 11px;
 }
-
 .landing {
-    position: relative;
+    position: relative; 
     min-height: 100vh;
-    background-color: #000;
-    background-image: url(../MEDIA/image/companyBackgroung.png);
-    background-size: cover;
+     background-color: #000; 
+     background-image: url(/MEDIA/image/companyBackgroung.png);
+     background-size: cover;
 }
-
 .landing .text {
     position: absolute;
     top: 40%;
@@ -151,9 +135,10 @@ header nav ul li a:hover {
     padding: 50px;
     width: 50%;
     background: rgba(255, 255, 255, 0.6);
-    box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(4px);
-    border-radius: 8px;
+box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.25);
+backdrop-filter: blur(4px);
+/* Note: backdrop-filter has minimal browser support */
+border-radius: 8px;
     display: flex;
     justify-content: flex-end;
 }
@@ -168,20 +153,19 @@ header nav ul li a:hover {
     font-weight: 600;
     font-size: 24px;
     line-height: 1.5;
-}
 
+}
 .landing .text .content h2 {
     font-family: 'Noto Sans Arabic';
     font-style: normal;
     font-weight: 700;
     font-size: 34px;
-    margin-bottom: 28px;
-    line-height: 1.5;
-    color: #181818;
-    direction: rtl;
-    text-align: start;
+margin-bottom: 28px;
+line-height: 1.5;
+color: #181818;
+direction: rtl;
+text-align: start;
 }
-
 .landing .text .content h2::after {
     content: '';
     display: block;
@@ -190,49 +174,43 @@ header nav ul li a:hover {
     background-color: #6f6464;
     margin-top: 10px;
 }
-
 .landing .text .content p {
     font-family: 'Noto Sans Arabic';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 22px;
-    color: #363636;
+font-style: normal;
+font-weight: 500;
+font-size: 22px;
+color: #363636;;
 }
-
 @media (max-width: 767px) {
     .landing .text {
         width: 100%;
         padding: 20px;
     }
-
     .landing .text .content {
         max-width: 100%;
     }
-
     .landing .text .content span {
         font-size: 20px;
     }
-
     .landing .text .content h2 {
         font-size: 26px;
     }
+    
 }
-
 .main-heading {
     text-align: center;
 }
-
 .main-heading h2 {
     font-size: 40px;
     position: relative;
     margin-bottom: 70px;
     font-family: 'Noto Sans Arabic';
-    font-style: normal;
-    font-weight: 500;
-    color: #000000;
-    text-shadow: 1px 4px 6px rgba(72, 45, 45, 0.34);
-}
+font-style: normal;
+font-weight: 500;
+color: #000000;
 
+text-shadow: 1px 4px 6px rgba(72, 45, 45, 0.34);
+}
 .main-heading h2::before {
     content: '';
     position: absolute;
@@ -242,8 +220,8 @@ header nav ul li a:hover {
     background-color: #333;
     bottom: -16px;
     width: 120px;
-}
 
+}
 .main-heading h2::after {
     content: '';
     position: absolute;
@@ -253,48 +231,47 @@ header nav ul li a:hover {
     height: 12px;
     border: 2px solid #333;
     bottom: -23px;
-    background-color: white;
+    background-color: white;   
 }
-
 .services-container {
     padding: 20px;
     border: 1px solid #000000;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
+border-radius: 20px;
+display: flex;
+flex-direction: column;
+align-items: center;
+position: relative;
 }
-
 .services {
     padding-top: 50px;
     padding-bottom: 50px;
 }
-
 .services .srv-box {
     display: flex;
     margin: 25px 85px;
-    background: #F7F5F5;
-    border-radius: 9px;
-}
+    
+background: #F7F5F5;
+/* border: 1px solid #000000; */
+border-radius: 9px;
 
+
+}
 .services .srv-box img {
     margin-right: 50px;
     width: 400px;
     border-radius: 9px;
-}
 
+}
 .services .srv-box .text h3 {
     text-align: end;
     padding: 15px;
 }
-
 .services .srv-box .text p {
     line-height: 1.5;
     text-align: end;
     padding: 15px;
+    
 }
-
 .services .srv-box .text button {
     display: block;
     margin: 0px auto;
@@ -303,18 +280,19 @@ header nav ul li a:hover {
     cursor: pointer;
     transition: 0.3s;
     background: #D9D9D9;
-    box-shadow: 1px 4px 4px 1px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    font-family: 'Italiana';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 22px;
-    color: #000000;
-    position: relative;
+box-shadow: 1px 4px 4px 1px rgba(0, 0, 0, 0.25);
+border-radius: 5px;
+
+font-family: 'Italiana';
+font-style: normal;
+font-weight: 400;
+font-size: 22px;
+
+color: #000000;
+position: relative;
     top: 35px;
     left: -240px;
 }
-
 .services .srv-box .text button:hover {
     background: rgb(177 163 163 / 76%);
     color: rgb(4, 4, 4);
@@ -322,31 +300,28 @@ header nav ul li a:hover {
     border-radius: 10px;
 }
 
+
+ 
 @media (max-width: 767px) {
     .services .srv-box {
         flex-direction: column;
         margin: 25px 0;
     }
-
     .services .srv-box img {
         margin-right: 0;
         width: 100%;
     }
-
     .services .srv-box .text h3 {
         text-align: center;
     }
-
     .services .srv-box .text p {
         text-align: center;
     }
 }
-
 @media (max-width: 767px) {
     .services-container {
         padding: 0;
     }
-
     .services .srv-box .text button {
         position: relative;
         left: 0;
@@ -357,43 +332,53 @@ header nav ul li a:hover {
 @media (min-width: 767px) and (max-width: 991px) {
     .services .srv-box {
         margin: 25px 0;
+        
     }
-
     .services .srv-box .text button {
         position: relative;
-        top: -14px;
-        left: -124px;
+    top: -14px;
+    left: -124px;
+
     }
 }
-
 @media (min-width: 991px) and (max-width: 1199px) {
     .services .srv-box {
         margin: 25px 0;
+        
     }
-
     .services .srv-box .text button {
         position: relative;
-        top: -14px;
-        left: -124px;
+    top: -14px;
+    left: -124px;
+
     }
 }
-
 .design {
     padding-top: 50px;
     padding-bottom: 50px;
     height: 600px;
     position: relative;
+    /* background-color: #D9D9D9; */
     background: #FFFAFA;
     display: flex;
     align-items: center;
     overflow: hidden;
     transform: translateY(-100px);
     z-index: -1;
+    /* background-image: url(/MEDIA/image/forYou.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%; */
 }
-
 .DIR {
     transform: translateY(20px);
 }
+/* @media (max-width: 767px) {
+    .design {
+        display: flex;
+        flex-direction: column;
+    }
+} */
 
 .design .image,
 .design .text {
@@ -401,67 +386,59 @@ header nav ul li a:hover {
     z-index: 2;
     flex: 1;
 }
-
 .design .image {
     text-align: center;
 }
-
 .design .image img {
     position: relative;
     bottom: -150px;
 }
-
 .design .text {
     font-family: 'Noto Sans Arabic';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 68px;
-    text-align: right;
-    transform: translateY(20px);
-    color: #000000;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 68px;
+text-align: right;
+transform: translateY(20px);
+color: #000000;
     padding: 7px;
     padding-right: 45px;
+    /* background-color: #6f6464; */
     background: rgba(255, 255, 255, 0.6);
     box-shadow: -2px 2px 1px rgb(0 0 0 / 25%), 0px -2px 1px rgb(0 0 0 / 25%);
+    /* filter: blur(1px); */
 }
-
 .design .text h2 {
     font-weight: normal;
     margin-bottom: 40px;
 }
-
 @media(max-width: 767px) {
     .design .image {
         display: none;
     }
 }
-
 @media (min-width: 767px) and (max-width: 930px) {
     .design .text {
         padding: 0;
-        transform: translateY(97px);
-        ;
+        transform: translateY(97px);;
     }
 }
-
 .portfolio {
     padding-top: 50px;
     padding-bottom: 50px;
 }
-
 .portfolio .portfolio-content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 30px;
 }
-
 .portfolio .portfolio-content .round {
     width: 270px;
     height: 270px;
     border-radius: 50%;
     background: #FFF0BD;
-    box-shadow: 0px 5px 2px rgba(0, 0, 0, 0.25);
+box-shadow: 0px 5px 2px rgba(0, 0, 0, 0.25);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -470,128 +447,119 @@ header nav ul li a:hover {
     flex-direction: column;
     margin: auto;
 }
-
 .portfolio .portfolio-content .round2 {
     background-color: #DADADA;
-}
-
+} 
 .portfolio .portfolio-content .round img {
     width: 35px;
     height: 35px;
     margin-bottom: 10px;
 
 }
-
 .portfolio .portfolio-content .round .info {
     padding: 20px;
     text-align: center;
 }
-
 .portfolio .portfolio-content .round .info h2 {
-
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 1200;
-    font-size: 28px;
-    color: #000000;
+    
+font-family: 'Inter';
+font-style: normal;
+font-weight: 1200;
+font-size: 28px;
+/* line-height: 44px; */
+color: #000000;
 }
-
 .portfolio .portfolio-content .round .info p {
     line-height: 1.3;
     margin-top: 15px;
     font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    color: #000000;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+color: #000000;
 }
-
 @media (max-width: 767px) {
     .portfolio .portfolio-content {
-        margin-top: -100px;
-    }
+margin-top: -100px; 
+   }
 }
 
-.hvr-bounce-to-right:before {
+  .hvr-bounce-to-right:before{
     background-color: #DADADA !important;
     transition-duration: 0.7s !important;
 
-}
-
-.hvr-bounce-to-left:before {
-    background: #DADADA !important;
+  }
+  .hvr-bounce-to-left:before {
+    background: #DADADA
+    !important;
     transition-duration: 0.7s !important;
 
-}
-
-.hvr-shutter-out-horizontal:before {
-    background: #FFF0BD !important;
-    transition-duration: 0.7s !important;
-}
-
-@-webkit-keyframes scale-up-tl {
+  }
+  .hvr-shutter-out-horizontal:before {
+    background: #FFF0BD
+    !important;
+    transition-duration: 0.7s!important;
+  }
+  @-webkit-keyframes scale-up-tl {
     0% {
-        -webkit-transform: scale(0.5);
-        transform: scale(0.5);
-        -webkit-transform-origin: 0% 0%;
-        transform-origin: 0% 0%;
+      -webkit-transform: scale(0.5);
+              transform: scale(0.5);
+      -webkit-transform-origin: 0% 0%;
+              transform-origin: 0% 0%;
     }
-
     100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-transform-origin: 0% 0%;
-        transform-origin: 0% 0%;
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-transform-origin: 0% 0%;
+              transform-origin: 0% 0%;
     }
+  }
+  .scale-up-tl {
+	-webkit-animation: scale-up-tl 0.8s linear both;
+	        animation: scale-up-tl 0.8s linear both;
 }
 
-.scale-up-tl {
-    -webkit-animation: scale-up-tl 0.8s linear both;
-    animation: scale-up-tl 0.8s linear both;
-}
 
-@keyframes scale-up-tl {
+
+  @keyframes scale-up-tl {
     0% {
-        -webkit-transform: scale(0.5);
-        transform: scale(0.5);
-        -webkit-transform-origin: 0% 0%;
-        transform-origin: 0% 0%;
+      -webkit-transform: scale(0.5);
+              transform: scale(0.5);
+      -webkit-transform-origin: 0% 0%;
+              transform-origin: 0% 0%;
     }
-
     100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-transform-origin: 0% 0%;
-        transform-origin: 0% 0%;
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-transform-origin: 0% 0%;
+              transform-origin: 0% 0%;
     }
-}
-
-.footer {
+  }
+  
+  .footer {
     background-color: #EBEBEB;
     padding-top: 50px;
     padding-bottom: 20px;
     margin-top: 60px;
-}
-
-.footer .container {
+  }
+  .footer .container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 30px;
+    grid-gap: 30px; 
     text-align: center;
-}
 
-.footer .container .box-footer h3 {
-    color: #000000;
-    margin-bottom: 40px;
-    position: relative;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 24px;
-    text-align: center;
-}
-
-.footer .container .box-footer h3::after {
+  }
+  .footer .container .box-footer h3 {
+color: #000000;
+margin-bottom: 40px;
+position: relative;
+font-style: normal;
+font-weight: 800;
+font-size: 24px;
+text-align: center;
+  }
+  .footer .container .box-footer h3::after {
     content: '';
     position: absolute;
     width: 60%;
@@ -599,29 +567,53 @@ header nav ul li a:hover {
     background-color: #000000;
     bottom: -20px;
     left: 19%;
-}
-
-.footer .container .box-footer p {
+  }
+  .footer .container .box-footer p {
     color: #000000;
-    font-style: normal;
-    font-weight: 670;
-    font-size: 16px;
-    line-height: 32px;
-    text-align: center;
-    letter-spacing: 0.025em;
-}
 
-.icons-footer img {
+font-style: normal;
+font-weight: 670;
+font-size: 16px;
+line-height: 32px;
+text-align: center;
+letter-spacing: 0.025em;
+  }
+  .icons-footer img {
     width: 25px;
     height: 25px;
     margin: 5px;
-}
-
-@media (max-width: 992px) and (min-width: 768px) {
+  }
+  @media (max-width: 992px) and (min-width: 768px) {
     .footer .container {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(86px, 1fr));
         grid-gap: 37px;
         text-align: center;
     }
-}
+  }
+  .show1 {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 72%;
+    left: 55%;
+    width: 40%;
+    background-color: rgba(214, 202, 202, 0.5);
+
+  }
+  .show2 {
+    border-bottom: 2px solid black;
+  }
+  .show3 {
+    padding: 10px;
+    background: none;
+    border-radius: 0;
+    backdrop-filter: blur(0px);
+  }
+
+   
+
+  
+  
+  
+
