--- a/CSS/choose_template.css
+++ b/CSS/choose_template.css
@@ -21,9 +21,6 @@ h6 {
    font-family: 'Noto Sans Arabic', sans-serif;
 }
 
-body {
-   min-width: 370px;
-}
 
 ::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -409,23 +406,31 @@ body {
 }
 
 .templateBox {
-   min-width: 555px;
-   height: 655px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 420px;
+   height: 530px;
    border: 2px solid #FFFAFA;
    filter: drop-shadow(3px 6px 4px rgba(0, 0, 0, 0.5));
    border-radius: 12px;
-   margin: 150px;
-   margin-bottom: 55px;
+   margin: 50px;
+   margin-bottom: 85px;
+   padding: 10px;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+}
+
+.templateBox img {
+   width: 100%;
 }
 
 .chooseT {
    display: flex;
    align-items: center;
    justify-content: center;
-   width: 487px;
+   width: 395px;
    height: 77px;
    background: rgba(255, 91, 91, 0.82);
-   border: 1px solid #FFFFFF;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
    border-radius: 15px;
    margin: auto;
@@ -440,7 +445,7 @@ body {
    font-family: 'Noto Sans Arabic';
    font-style: normal;
    font-weight: 500;
-   font-size: 42px;
+   font-size: 35px;
    line-height: 101px;
    display: flex;
    align-items: center;
@@ -453,10 +458,9 @@ body {
    display: flex;
    align-items: center;
    justify-content: center;
-   width: 487px;
+   width: 395px;
    height: 77px;
    background: rgba(103, 103, 103, 0.74);
-   border: 1px solid #FFFFFF;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
    border-radius: 15px;
    margin: auto;
@@ -471,7 +475,7 @@ body {
    font-family: 'Noto Sans Arabic';
    font-style: normal;
    font-weight: 500;
-   font-size: 36px;
+   font-size: 30px;
    line-height: 101px;
    display: flex;
    align-items: center;
