--- a/CSS/choose_template.css
+++ b/CSS/choose_template.css
@@ -1,26 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic&family=Roboto:wght@100&display=swap');
 
 * {
-   margin: 0;
+   box-sizing: border-box;
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
    padding: 0;
+   margin: 0;
    -webkit-user-drag: none;
    -khtml-user-drag: none;
    -moz-user-drag: none;
    -o-user-drag: none;
    user-drag: none;
    user-select: none;
-   box-sizing: border-box;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-   font-family: 'Noto Sans Arabic', sans-serif;
+html {
+   scroll-behavior: smooth;
+   scroll-snap-type: y mandatory;
 }
 
+ul {
+   list-style-type: none;
+}
 
 ::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -34,7 +35,6 @@ h6 {
 }
 
 ::-webkit-scrollbar-thumb {
-   border-radius: 10px;
    background-image: -webkit-gradient(linear,
          left bottom,
          left top,
@@ -212,11 +212,11 @@ h6 {
 @media screen and (max-width: 800px) {
    .header {
       justify-content: center;
-      padding-top: 120px;
+      padding-top: 60px;
    }
 
    .header p {
-      font-size: 40px;
+      font-size: 160%;
       margin-right: 0;
    }
 }
@@ -376,7 +376,7 @@ h6 {
    font-family: 'Noto Sans Arabic';
    font-style: normal;
    font-weight: 600;
-   font-size: 50px;
+   font-size: 40px;
    color: #FFFFFF;
    text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
    text-decoration: underline;
@@ -391,8 +391,9 @@ h6 {
    }
 
    .header2 p {
-      font-size: 40px;
+      font-size: 200%;
       margin-right: 0;
+      margin-top: 10px;
    }
 }
 
@@ -410,7 +411,6 @@ h6 {
    flex-direction: column;
    align-items: center;
    width: 420px;
-   height: 530px;
    border: 2px solid #FFFAFA;
    filter: drop-shadow(3px 6px 4px rgba(0, 0, 0, 0.5));
    border-radius: 12px;
@@ -445,8 +445,7 @@ h6 {
    font-family: 'Noto Sans Arabic';
    font-style: normal;
    font-weight: 500;
-   font-size: 35px;
-   line-height: 101px;
+   font-size: 180%;
    display: flex;
    align-items: center;
    text-align: center;
@@ -475,8 +474,7 @@ h6 {
    font-family: 'Noto Sans Arabic';
    font-style: normal;
    font-weight: 500;
-   font-size: 30px;
-   line-height: 101px;
+   font-size: 180%;
    display: flex;
    align-items: center;
    text-align: center;
@@ -506,6 +504,14 @@ h6 {
    border-radius: 34px;
 }
 
+@media screen and (max-width: 800px) {
+   .contactContainer img {
+      width: 100%;
+      height: 100%;
+      border-radius: 0;
+   }
+}
+
 .contactBox {
    width: 589px;
    height: 589px;
@@ -513,7 +519,7 @@ h6 {
    background: #F4F4F4;
    border: 1px solid #000000;
    border-radius: 17px;
-   margin: 50px;
+   margin: 15px;
 }
 
 .contactBox form {
@@ -526,13 +532,13 @@ h6 {
 }
 
 .contactBox form input {
+   font-family: 'Noto Sans Arabic';
    width: 555px;
    height: 77px;
    background: #393939;
    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 10px;
    text-align: right;
-   font-family: 'Noto Sans Arabic';
    font-style: normal;
    font-weight: 400;
    font-size: 24px;
@@ -584,4 +590,134 @@ h6 {
    font-size: 34px;
    text-align: center;
    color: rgba(0, 0, 0, 0.73);
+   margin: 10px;
+}
+
+@media screen and (max-width: 800px) {
+   .contactBox {
+      width: 95%;
+      height: 95%;
+   }
+
+   .contactBox form input {
+      width: 95%;
+   }
+
+   .contactBox form textarea {
+      width: 95%;
+   }
+
+   .contactBox form button {
+      width: 30%;
+      font-size: 150%;
+   }
+}
+
+
+@media screen and (max-width: 700px) {
+   .topWaveBox {
+      display: none;
+   }
+
+   .botWaveBox {
+      display: none;
+   }
+
+   .templateBox {
+      width: 80%;
+   }
+
+   .chooseT {
+      width: 97%;
+   }
+
+   .showT {
+      width: 97%;
+   }
+
+   .serviceBox p {
+      line-height: 1.4;
+   }
+}
+
+.footer {
+   background-color: #EBEBEB;
+   padding-top: 50px;
+   padding-bottom: 20px;
+   margin-top: 60px;
+}
+
+.footer .container {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+   grid-gap: 30px;
+   text-align: center;
+}
+
+.footer .container .box-footer h3 {
+   color: #000000;
+   margin-bottom: 40px;
+   position: relative;
+   font-style: normal;
+   font-weight: 800;
+   font-size: 24px;
+   text-align: center;
+}
+
+.footer .container .box-footer h3::after {
+   content: '';
+   position: absolute;
+   width: 60%;
+   height: 2px;
+   background-color: #000000;
+   bottom: -20px;
+   left: 19%;
+}
+
+.footer .container .box-footer p {
+   font-family: 'Noto Sans Arabic';
+   color: #000000;
+   font-style: normal;
+   font-weight: 670;
+   font-size: 16px;
+   line-height: 32px;
+   text-align: center;
+   letter-spacing: 0.025em;
+}
+
+.icons-footer img {
+   width: 25px;
+   height: 25px;
+   margin: 5px;
+}
+
+@media (max-width: 992px) and (min-width: 768px) {
+   .footer .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(86px, 1fr));
+      grid-gap: 37px;
+      text-align: center;
+   }
+}
+
+.show1 {
+   display: flex;
+   flex-direction: column;
+   position: absolute;
+   top: 72%;
+   left: 55%;
+   width: 40% !important;
+   height: auto !important;
+   background-color: rgba(214, 202, 202, 0.5);
+}
+
+.show2 {
+   border-bottom: 2px solid black;
+}
+
+.show3 {
+   padding: 10px;
+   background: none;
+   border-radius: 0;
+   backdrop-filter: blur(0px);
 }
