--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -11,9 +11,9 @@
   box-sizing: border-box;
 }
 
-input {
+/* input {
   text-align: right;
-}
+} */
 
 h1,
 h2,
@@ -30,7 +30,7 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
   background-color: #F5F5F5;
   border-radius: 10px;
 }
@@ -327,6 +327,11 @@ header nav ul li a:hover {
   color: #8F8F8F;
   padding: 10px;
 }
+ .input-box2 .add-skills_input2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 @media (max-width: 992px) {
   .input-box2 input {
@@ -603,3 +608,4 @@ header nav ul li a:hover {
     text-align: center;
   }
 }
+
