--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -328,7 +328,8 @@ header nav ul li a:hover {
   padding: 10px;
 }
 
-.input-box2 .add-skills_input2 , .add-skills_input2 {
+.input-box2 .add-skills_input2,
+.add-skills_input2 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -611,6 +612,11 @@ header nav ul li a:hover {
     text-align: center;
   }
 }
-.HiddenInput1,.HiddenInput2,.HiddenInput3,.HiddenInput4,.HiddenInput5 {
+
+.HiddenInput1,
+.HiddenInput2,
+.HiddenInput3,
+.HiddenInput4,
+.HiddenInput5 {
   display: none;
 }
