--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -617,6 +617,8 @@ header nav ul li a:hover {
 .HiddenInput2,
 .HiddenInput3,
 .HiddenInput4,
-.HiddenInput5 {
+.HiddenInput51,
+.HiddenInput52,
+.HiddenInput53 {
   display: none;
 }
