--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -321,7 +321,7 @@ header nav ul li a:hover {
 }
 
 .input-box2 input {
-  width: 530px;
+  width: 450px;
   height: 39px;
   background: #FFFFFF;
   border: 1px solid #000000;
@@ -490,7 +490,7 @@ height: fit-content;
 }
 
 .input-box5 input {
-  width: 480px;
+  width: 450px;
   height: 39px;
   background: #FFFFFF;
   border: 1px solid #000000;
@@ -659,7 +659,26 @@ height: fit-content;
 .HiddenInput4,
 .HiddenInput51,
 .HiddenInput52,
-.HiddenInput53 {
+.HiddenInput53,
+.HiddenInput41,
+.HiddenInput42,
+.HiddenInput43 {
   display: none;
 }
-
+.fa-solid fa-minus {
+  display: flex !important;
+    justify-content: center !important;
+    padding: 4px !important;
+    border: 1px solid !important;
+    border-radius: 50% !important;
+    background: coral !important;
+}
+.inc {
+  padding: 4px !important;
+  border: 1px solid !important;
+  border-radius: 50% !important;
+  background: aquamarine;
+}
+.inc1 {
+  margin-left: 4px;
+}
