--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -510,11 +510,13 @@ height: fit-content;
 }
 
 .list-form {
+  display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
   border: 2px solid;
   margin: 6px;
   padding: 3px;
-  /* list-style: inside; */
-  border-radius: 7px
+  border-radius: 7px  
 }
 .history {
   grid-row: 3/1;
@@ -665,13 +667,22 @@ height: fit-content;
 .HiddenInput43 {
   display: none;
 }
-.fa-solid fa-minus {
+.add_Askill {
+  display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+ .fa-minus {
+  height: 20px;
+  width: 20px;
   display: flex !important;
-    justify-content: center !important;
-    padding: 4px !important;
-    border: 1px solid !important;
-    border-radius: 50% !important;
-    background: coral !important;
+  justify-content: center !important;
+  align-items: center;
+  padding: 4px !important;
+  border: 1px solid !important;
+  border-radius: 50% !important;
+  background: coral !important;
+  margin-top: 3px;
 }
 .inc {
   padding: 4px !important;
