--- a/CSS/choose_template.css
+++ b/CSS/choose_template.css
@@ -14,6 +14,14 @@
    user-select: none;
 }
 
+a {
+   text-decoration: none !important;
+}
+
+a:active {
+   text-decoration: none !important;
+}
+
 html {
    scroll-behavior: smooth;
    scroll-snap-type: y mandatory;
