--- a/CSS/home.css
+++ b/CSS/home.css
@@ -13,6 +13,10 @@ html {
     scroll-snap-type: y mandatory;
 }
 
+p {
+    font-family: 'Noto Sans Arabic';
+}
+
 ul {
     list-style-type: none;
 }
@@ -246,7 +250,7 @@ header nav ul li a:hover {
 .main-heading h2 {
     font-size: 40px;
     position: relative;
-    margin-bottom: 70px;
+    margin-bottom: 40px;
     font-family: 'Noto Sans Arabic';
     font-style: normal;
     font-weight: 500;
