--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -257,7 +257,7 @@ header nav ul li a:hover {
   border-radius: 7px;
 }
 
-.container .user-details .input-box input::placeholder {
+input::placeholder {
   color: #000000;
   text-align: end;
   font-family: 'Noto Sans Arabic';
@@ -331,17 +331,6 @@ header nav ul li a:hover {
   border-radius: 7px;
 }
 
-.input-box2 input::placeholder {
-  color: #000000;
-  text-align: end;
-  font-family: 'Noto Sans Arabic';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 33px;
-  color: #8F8F8F;
-  padding: 10px;
-}
 
 .Artistic_skills,
 .Personal_skills,
@@ -415,17 +404,7 @@ header nav ul li a:hover {
   grid-row: 1/4;
 }
 
-.user-details3 ::placeholder {
-  color: #000000;
-  text-align: end;
-  font-family: 'Noto Sans Arabic';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 33px;
-  color: #8F8F8F;
-  padding: 10px;
-}
+
 
 .user-details3 .input-box3 input {
   width: 295px;
@@ -458,17 +437,6 @@ header nav ul li a:hover {
   grid-row: 1/3;
 }
 
-.user-details4 ::placeholder {
-  color: #000000;
-  text-align: end;
-  font-family: 'Noto Sans Arabic';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 33px;
-  color: #8F8F8F;
-  padding: 10px;
-}
 
 .user-details4 .input-box4 input {
   width: 295px;
@@ -504,18 +472,6 @@ header nav ul li a:hover {
   background: #FFFFFF;
   border: 1px solid #000000;
   border-radius: 7px;
-}
-
-.user-details5 ::placeholder {
-  color: #000000;
-  text-align: end;
-  font-family: 'Noto Sans Arabic';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 33px;
-  color: #8F8F8F;
-  padding: 10px;
 }
 
 .list-form {
