--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -248,16 +248,104 @@ header nav ul li a:hover {
   height: 75px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+.user-label {
+  position: absolute;
+  left: 50px;
+  color: #e8e8e8;
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 150ms cubic-bezier(0.4,0,0.2,1);
+ }
+ .user-label2 {
+  position: absolute;
+  left: 440px;
+  color: #e8e8e8;
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 150ms cubic-bezier(0.4,0,0.2,1);
+ }
+ .user-label3 {
+  position: absolute;
+  left: 820px;
+  color: #e8e8e8;
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 150ms cubic-bezier(0.4,0,0.2,1);
+ }
+ 
+@media (min-width: 992px) and (max-width: 1198px) {
+  .user-label {
+    position: absolute;
+    left: 33px;
+  }
+  .user-label2 {
+    position: absolute;
+    left: 370px;
+  }
+  .user-label3 {
+    position: absolute;
+    left: 705px;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .user-label {
+    position: absolute;
+    left: 33px;
+  }
+  .user-label2 {
+    position: absolute;
+    left: 405px;
+  }
+  .user-label3 {
+    position: absolute;
+    left: 405px;
+  }
+}
+@media (max-width: 767px) {
+  .user-label {
+    position: absolute;
+    left: 80px;
+  }
+  .user-label2 {
+    position: absolute;
+    left: 80px;
+  }
+  .user-label3 {
+    position: absolute;
+    left: 80px;
+  }
+}
+
 
 .container .user-details .input-box input {
   width: 300px;
   height: 50px;
-  background: #FFFFFF;
-  border: 1px solid #000000;
-  border-radius: 7px;
+  /* background: #FFFFFF; */
+  /* border: 1px solid #000000; */
+  /* border-radius: 7px; */
+  border: solid 1.5px #9e9e9e;
+  border-radius: 1rem;
+  background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: rgb(176 159 159);
+  transition: border 150ms cubic-bezier(0.4,0,0.2,1);
 }
+.user-details .input-box input:focus, .user-details .input-box input:valid {
+  outline: none;
+  border: 1.5px solid #1a73e8;
+ }
+ 
+ .user-details .input-box input:focus ~ label, .user-details .input-box input:valid ~ label {
+  transform: translateY(-50%) scale(0.8);
+    background-color: rgb(177 162 162);
+    padding: 0px 0.2em;
+    color: rgb(255 255 255);
+    border-radius: 5px;
+    border: 1px solid mediumblue;
+ }
 
-input::placeholder {
+/* input::placeholder {
   color: #000000;
   text-align: end;
   font-family: 'Noto Sans Arabic';
@@ -267,7 +355,7 @@ input::placeholder {
   line-height: 33px;
   color: #8F8F8F;
   padding: 10px;
-}
+} */
 
 .personal-desc {
   grid-row: 3/5;
@@ -313,6 +401,13 @@ input::placeholder {
   margin: auto;
 }
 
+
+ 
+
+
+
+
+
 .form2 {
   margin-top: 100px;
 }
@@ -324,6 +419,7 @@ input::placeholder {
 }
 
 .input-box2 input {
+  padding: 10px;
   width: 450px;
   height: 39px;
   background: #FFFFFF;
@@ -338,6 +434,7 @@ input::placeholder {
 .lang_skill {
   display: flex;
   flex-wrap: wrap;
+  width: 445px;
 }
 
 .resp_skill {
@@ -467,6 +564,7 @@ input::placeholder {
 }
 
 .input-box5 input {
+  padding: 10px;
   width: 450px;
   height: 39px;
   background: #FFFFFF;
@@ -477,11 +575,25 @@ input::placeholder {
 .list-form {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  width: fit-content;
   flex-direction: row-reverse;
   border: 2px solid;
   margin: 6px;
-  padding: 3px;
+  padding: 3spx;
   border-radius: 7px
+}
+@media (max-width: 767px) {
+  .list-form {
+    width: 265px;
+  }
+  .Artistic_skills,
+.Personal_skills,
+.important_skill,
+.lang_skill {
+
+  width: 330px;
+}
 }
 
 .history {
@@ -636,10 +748,13 @@ input::placeholder {
 .fa-minus {
   display: flex !important;
   justify-content: center !important;
-  padding: 4px !important;
+  padding: 3px !important;
   border: 1px solid !important;
   border-radius: 50% !important;
   background: coral !important;
+  margin-top: 2px;
+  margin: 3px;
+  margin-right: 10px;
 }
 
 .inc {
@@ -656,7 +771,6 @@ input::placeholder {
 
 canvas {
   display: block;
-  vertical-align: bottom;
 }
 
 /* ---- particles.js container ---- */
@@ -696,7 +810,6 @@ canvas {
 
 #stats,
 .count-particles {
-  -webkit-user-select: none;
   margin-top: 5px;
   margin-left: 5px;
 }
