--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -251,7 +251,7 @@ header nav ul li a:hover {
 .user-label {
   position: absolute;
   left: 50px;
-  color: #e8e8e8;
+  color: #b0b0b0;
   pointer-events: none;
   transform: translateY(1rem);
   transition: 150ms cubic-bezier(0.4,0,0.2,1);
@@ -269,7 +269,7 @@ header nav ul li a:hover {
   left: 820px;
   color: #e8e8e8;
   pointer-events: none;
-  transform: translateY(1rem);
+  transform: translateY(0.8rem);
   transition: 150ms cubic-bezier(0.4,0,0.2,1);
  }
  
@@ -320,11 +320,8 @@ header nav ul li a:hover {
 .container .user-details .input-box input {
   width: 300px;
   height: 50px;
-  /* background: #FFFFFF; */
-  /* border: 1px solid #000000; */
-  /* border-radius: 7px; */
   border: solid 1.5px #9e9e9e;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   background: none;
   padding: 1rem;
   font-size: 1rem;
@@ -333,16 +330,16 @@ header nav ul li a:hover {
 }
 .user-details .input-box input:focus, .user-details .input-box input:valid {
   outline: none;
-  border: 1.5px solid #1a73e8;
+  border: 1.5px solid #000000;
  }
  
  .user-details .input-box input:focus ~ label, .user-details .input-box input:valid ~ label {
   transform: translateY(-50%) scale(0.8);
-    background-color: rgb(177 162 162);
+    background-color: #f5f5f5;
     padding: 0px 0.2em;
-    color: rgb(255 255 255);
+    color: rgb(10, 10, 10);
     border-radius: 5px;
-    border: 1px solid mediumblue;
+    border: 1px solid rgb(0, 0, 0);
  }
 
 /* input::placeholder {
@@ -831,7 +828,7 @@ canvas {
 }
 .button {
   transform: translateX(50%);
-  --color: #00A97F;
+  --color: #EBEBEB;
   padding: 0.8em 1.7em;
   background-color: transparent;
   border-radius: .3em;
@@ -844,7 +841,7 @@ canvas {
   border: 1px solid;
   font-family: inherit;
   text-transform: uppercase;
-  color: var(--color);
+  color: #000000;
   z-index: 1;
  }
 
