--- a/CSS/personalInformation.css
+++ b/CSS/personalInformation.css
@@ -572,6 +572,8 @@ header nav ul li a:hover {
 }
 
 .list-form {
+  min-width: 70px;
+    padding: 5px;
   display: flex;
   align-items: center;
   justify-content: space-between;
