--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,4 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css');
+
+html {
+   overflow: scroll;
+   overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+   width: 0;
+   background: transparent;
+}
 
 body {
    background: #e9e9e9;
@@ -9,16 +20,15 @@ body {
    -moz-osx-font-smoothing: grayscale;
 }
 
-/* Pen Title */
 .pen-title {
    padding: 50px 0;
    text-align: center;
    letter-spacing: 2px;
-   padding-top: 200px;
+   padding-top: 130px;
 }
 
 .pen-title h1 {
-   font-family: 'Noto Sans Arabic';
+   font-family: 'Droid Arabic Naskh', serif;
    margin: 0 0 20px;
    font-size: 35px;
    font-weight: 300;
@@ -135,7 +145,7 @@ body {
    top: 40px;
    right: -70px;
    box-shadow: none;
-   transform: scale(10);
+   transform: scale(20);
    transition: transform 0.3s ease;
 }
 
@@ -287,7 +297,7 @@ body {
    display: inline-block;
    background: 0;
    width: 240px;
-   border: 2px solid #e3e3e3;
+   border: 2px solid #9d9d9d;
    padding: 20px 0;
    font-size: 24px;
    font-weight: 600;
@@ -300,7 +310,7 @@ body {
 .card .button-container button span {
    position: relative;
    z-index: 1;
-   color: #ddd;
+   color: #9d9d9d;
    transition: 0.3s ease;
 }
 
@@ -310,7 +320,7 @@ body {
    top: 50%;
    left: 50%;
    display: block;
-   background: #ed2553;
+   background: #434343;
    width: 30px;
    height: 30px;
    border-radius: 100%;
@@ -322,13 +332,13 @@ body {
 .card .button-container button:hover,
 .card .button-container button:active,
 .card .button-container button:focus {
-   border-color: #ed2553;
+   border-color: #181818;
 }
 
 .card .button-container button:hover span,
 .card .button-container button:active span,
 .card .button-container button:focus span {
-   color: #ed2553;
+   color: #181818;
 }
 
 .card .button-container button:active span,
@@ -344,7 +354,7 @@ body {
 
 .card .footer {
    margin: 40px 0 0;
-   color: #d3d3d3;
+   color: #9d9d9d;
    font-size: 24px;
    font-weight: 300;
    text-align: center;
@@ -372,7 +382,7 @@ body {
    box-shadow: none;
    padding: 0;
    transition: 0.3s ease;
-   
+
 }
 
 .card.alt .toggle {
@@ -398,6 +408,24 @@ body {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    transform: translate(0, 0);
+}
+
+@media screen and (max-width : 640px) {
+   .card.alt .toggle {
+      width: 80px;
+      height: 80px;
+   }
+
+   .card.alt .toggle:before {
+      position: relative;
+      left: 1px;
+      bottom: 37px;
+      font-size: 36px;
+   }
+
+   .card.alt {
+      border: none;
+   }
 }
 
 .card.alt .title,
@@ -461,7 +489,7 @@ body {
 }
 
 .card.alt .button-container button span {
-   color: #ed2553;
+   color: #191919;
 }
 
 .card.alt .button-container button:hover {
