--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic&family=Roboto:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css');
 
+* {
+   user-select: none;
+}
+
 html {
    overflow: scroll;
    overflow-x: hidden;
@@ -96,7 +100,6 @@ body {
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-/* CodePen */
 #portfolio {
    bottom: 96px;
    right: 36px;
@@ -111,7 +114,6 @@ body {
    line-height: 44px;
 }
 
-/* Container */
 .container {
    position: relative;
    max-width: 460px;
@@ -182,7 +184,6 @@ body {
    transition-delay: 0.7s;
 }
 
-
 .card {
    position: relative;
    background: #ffffff;
@@ -191,7 +192,6 @@ body {
    box-sizing: border-box;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    transition: 0.3s ease;
-
 }
 
 .card:first-child {
@@ -501,7 +501,6 @@ body {
    display: none;
 }
 
-/* Keyframes */
 @-webkit-keyframes buttonFadeInUp {
    0% {
       bottom: 30px;
@@ -657,4 +656,21 @@ body {
    .mobileDropMenu {
       display: block;
    }
+}
+
+canvas {
+   display: block;
+}
+
+#particles-js {
+   position: fixed;
+   width: 100%;
+   height: 100%;
+   background-color: #e9e9e9;
+   background-image: url("");
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: 50% 50%;
+   top: 0;
+   z-index: -1;
 }
