--- a/CSS/home.css
+++ b/CSS/home.css
@@ -6,6 +6,12 @@
     -moz-box-sizing: border-box;
     padding: 0;
     margin: 0;
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-select: none;
+    box-sizing: border-box;
 }
 
 html,
@@ -447,6 +453,7 @@ header nav ul li a:hover {
     padding-right: 45px;
     background: rgba(255, 255, 255, 0.6);
     box-shadow: -2px 2px 1px rgb(0 0 0 / 25%), 0px -2px 1px rgb(0 0 0 / 25%);
+    border-radius: 10px 0px 0px 10px;
 }
 
 .design .text h2 {
