--- a/CSS/home.css
+++ b/CSS/home.css
@@ -723,7 +723,8 @@ header nav ul li a:hover {
 }
 
 .listS {
-    width: 140px !important;
+    min-width: 140px !important;
+    width: 100%;
 }
 
 .navBar_buttons ul li:hover {
@@ -754,8 +755,9 @@ header nav ul li a:hover {
 
 @media screen and (max-width: 900px) {
     .navBar_buttons ul li {
-        width: 80px;
+        width: 100%;
         height: 40px;
+        text-align: center;
     }
 
     .navBar_buttons ul li a {
@@ -775,7 +777,6 @@ header nav ul li a:hover {
     .navBar_buttons ul li {
         display: none;
     }
-
 
     .logoBox {
         height: 80px;
