--- a/CSS/work.css
+++ b/CSS/work.css
@@ -76,7 +76,7 @@ ul {
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    list-style: none;
-   font-weight: 400;
+   font-weight: 700;
    text-decoration: none;
    font-size: 30px;
    color: #424242;
@@ -273,6 +273,10 @@ ul {
    font-size: 25px;
    color: #000000;
    margin: 20px;
+   white-space: -moz-pre-wrap;
+   white-space: -o-pre-wrap;
+   white-space: pre-wrap;
+   word-wrap: break-word;
 }
 
 .topBox img {
@@ -478,13 +482,6 @@ select {
    color: #4c4c4c;
 }
 
-p {
-   font-size: 12px;
-   width: 150px;
-   display: inline-block;
-   margin-left: 18px;
-}
-
 h1 {
    font-size: 32px;
    font-weight: 300;
@@ -521,7 +518,7 @@ input[type=radio] {
 }
 
 form {
-   margin: 0 30px;
+   margin: -16px 30px;
 }
 
 label.radio {
@@ -620,7 +617,7 @@ input[type=password] {
    margin-top: 20px;
 }
 
-a.button {
+button.button {
    font-size: 20px;
    font-weight: 600;
    color: white;
@@ -645,9 +642,10 @@ a.button {
    position: relative;
    left: -50%;
    transform: translateX(50%);
+   border: none;
 }
 
-a.button:hover {
+button.button:hover {
    top: 3px;
    background-color: #2e458b;
    -webkit-box-shadow: none;
@@ -655,15 +653,22 @@ a.button:hover {
    box-shadow: none;
 }
 
-.zaid {
-   position: relative;
+.header {
+   width: 100%;
+   height: 70px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-evenly;
+   align-items: center;
 }
-.zaid::before {
-   content: "\00d7";
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    left: 87%;
-    top: 7px;
-    cursor: pointer;
+
+.testboxH1 {
+   margin-left: 110px;
+}
+
+.fa-close {
+   font-size: 26px;
+   cursor: pointer;
+   padding-left: 72px;
+   padding-bottom: 7px;
 }
